# Image_processor

./: CMakeLists.txt  main.cpp
lib/ColorPanel/: ColorPanel.cpp  ColorPanel.h
lib/Parser/: parser.cpp  parser.h
lib/bmp/: FILE_INFO.cpp  FILE_INFO.h
lib/filters/: Crop.cpp  Crop.h  EdgeDetection.cpp  EdgeDetection.h  Grayscale.cpp  Grayscale.h  Negative.cpp  Negative.h  Sharpening.cpp  Sharpening.h  facroty.cpp  facroty.h
lib/in_out/: Read.cpp  Read.h  Write.cpp  Write.h
